--- a/first/index.html
+++ b/first/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/reset.css">
+    <link rel="stylesheet" href="/style.css">
     <title>html-layout first</title>
   </head>
   <body>
     <main role="main">
       <header class="main-header">
-        <h2></h2>
+        <h2>Text</h2>
       </header>
       <section class="main-body">
 
