--- a/first/index.html
+++ b/first/index.html
@@ -10,11 +10,11 @@
   <body>
     <main role="main">
       <header class="main-header">
-        <h2>Text</h2>
       </header>
       <section class="main-body">
-
       </section>
+      <footer class="main-footer">
+      </footer>
     </main>
 
   </body>
