--- a/second/index.html
+++ b/second/index.html
@@ -5,16 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
-    <title>html-layout first</title>
+    <title>html-layout second</title>
   </head>
   <body>
     <main role="main">
-      <header class="main-header">
-      </header>
-      <section class="main-body">
+      <section class="left-section">
+
       </section>
-      <footer class="main-footer">
-      </footer>
+      <section class="middle-section">
+
+      </section>
+      <section class="right-section">
+        <section class="image-container">
+          <p>
+            Image Placeholder
+          </p>
+        </section>
+      </section>
     </main>
 
   </body>
