--- a/third/index.html
+++ b/third/index.html
@@ -5,16 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
-    <title>html-layout first</title>
+    <title>html-layout third</title>
   </head>
   <body>
     <main role="main">
-      <header class="main-header">
-      </header>
-      <section class="main-body">
-      </section>
-      <footer class="main-footer">
-      </footer>
+
     </main>
 
   </body>
