--- a/third/index.html
+++ b/third/index.html
@@ -9,7 +9,31 @@
   </head>
   <body>
     <main role="main">
+      <header class="main-header">
+        <section class="logo-container">
 
+        </section>
+      </header>
+      <section class="main-content">
+        <p>
+          Consider hiding the status bar - and all other app UI - while people are actively viewing full-screen media.
+          If you hide the status bar, be sure to let people retrieve it (and the appropriate app UI) with a single tap.
+          Unless you have a compelling reason to do so, avoid defining a custom gesture to redisplay the status bar because
+          users are unlikely to discover such a gesture or to remember it.
+        </p>
+      </section>
+      <section class="main-content" id="blue">
+
+      </section>
+      <section class="main-content" id="teal">
+
+      </section>
+      <section class="main-content" id="green">
+
+      </section>
+      <section class="main-content" id="yellow">
+
+      </section>
     </main>
 
   </body>
